# fastapi-tutorial

./: Dockerfile  docker-compose.yaml  pyproject.toml
api/: main.py
api/cruds/: task.py
api/models/: task.py
api/routers/: task.py
api/schemas/: done.py  task.py
tests/: test_main.py
