[tool.poetry]
name = "demo-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.81.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
SQLAlchemy = "^1.4.40"
aiomysql = "^0.1.1"

[tool.poetry.dev-dependencies]
anyio = "^3.6.1"
pytest-asyncio = "^0.19.0"
pytest-tornasync = "^0.6.0"
pytest-trio = "^0.7.0"
pytest-twisted = "^1.13.4"
Twisted = "^22.4.0"
httpx = "^0.23.0"
aiosqlite = "^0.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

